--- a/ClientApp/app/Till/menuBtn.component.html
+++ b/ClientApp/app/Till/menuBtn.component.html
@@ -1,8 +1,8 @@
-<div class="row w-100 m-0 p-0" style="min-height:450px">
+<div class="row w-100 m-0 p-0" style="min-height:450px;background:DarkSlateGray">
     <div class="col m-0 p-0">
         <table class="table m-0 p-0">
             <tr *ngFor="let menuLine1 of menuLines1" class="m-0 p-0">
-                <td class="m-0 p-0">
+                <td class="m-0 p-0" style="background: #cce6ff">
                         <button type="button" class="btn btn-sm btn-block text-white m-0 p-0" 
                         style="min-height:50px"
                         [style.background]="menuLine==menuLine1 ?'black':menuLine1.htmlColour"
@@ -16,7 +16,7 @@
     <div class="col m-0 p-0">
         <table class="table m-0 p-0">
             <tr *ngFor="let menuLine2 of menuLines2" class="m-0 p-0">
-                <td class="m-0 p-0">
+                <td class="m-0 p-0" style="background: #cce6ff">
                     <button type="button" class="btn btn-sm btn-block text-white m-0 p-0" 
                         style="min-height:50px"
                         [style.background]="menuLine==menuLine2 ?'black':menuLine2.htmlColour"
@@ -30,7 +30,7 @@
     <div class="col m-0 p-0">
         <table class="table m-0 p-0">
             <tr *ngFor="let menuHeader of menuHeaders" class="m-0 p-0">
-                <td class="m-0 p-0">
+                <td class="m-0 p-0" style="background: #cce6ff">
                     <button type="button" class="btn btn-sm btn-block text-white m-0 p-0" 
                         style="min-height:50px"
                         [style.background]="menuHeaderId==menuHeader.menuId?'black':menuHeader.htmlColour"
@@ -42,7 +42,7 @@
         </table>
     </div>  
 </div>
-<div class="row m-0 p-0" style="background:#027cbb" >
+<div class="row m-0 p-0" style="background:DarkSlateGray" >
     <div class="col m-0 p-0">
         <div *ngIf="MenuLinePages.length > 1" class="text-left my-1">
             <button *ngFor="let page of MenuLinePages" class="btn btn-outline-info btn-sm mx-1"
@@ -69,7 +69,7 @@
     </div>
     <div class="col m-0 p-0">
         <div *ngIf="TotalMenuHeaderPages > 1" class="text-center my-1">
-            <button type="button" class="btn btn-warning btn-sm"
+            <button type="button" class="btn btn-info btn-sm"
                 (click)="ChangeMenuHeaderPageBack()">
                     <i class="fa fa-arrow-circle-left fa-lg"></i>
             </button>
@@ -77,7 +77,7 @@
                 <span class="badge badge-light">{{CurrentMenuHeaderPage}}</span>of
                 <span class="badge badge-light">{{TotalMenuHeaderPages}}</span>
             </button>
-            <button type="button" class="btn btn-warning btn-sm"
+            <button type="button" class="btn btn-info btn-sm"
                 (click)="ChangeMenuHeaderPageNext()">
                     <i class="fa fa-arrow-circle-right fa-lg"></i>
             </button>
