--- a/ClientApp/app/Till/tables.component.html
+++ b/ClientApp/app/Till/tables.component.html
@@ -1,4 +1,5 @@
-<div class="row w-100 m-0 p-0" style="min-height:768px;align-content: center">
+<h3 class="text-info text-center m-0 p-0" >SELECT THE TABLE</h3>
+<div class="row w-100 m-0 p-0" style="min-height:700px;align-content: center">
         <div class="col m-0 p-0">
                 <table class="table m-0 p-0">
                         <tr *ngFor="let table of tablesCol1"  class="m-0 p-0">
