--- a/ClientApp/app/Till/number.component.html
+++ b/ClientApp/app/Till/number.component.html
@@ -1,4 +1,4 @@
-<div class="row w-100 m-0 p-0 text-center" style="min-height:27px;max-height:27px;background:#027cbb">
+<div class="row w-100 m-0 p-0 text-center" style="min-height:27px;max-height:27px;background:DarkSlateGray">
     <table class="table table-condensed m-0 p-0"  style="min-height:27px;max-height:27px">
         <tr class="m-0 p-0 text-white" style="min-height:27px;max-height:27px">
             <td class="m-0 p-0 text-left"><current-time></current-time></td>
@@ -45,7 +45,7 @@
             </td>
             <td class="m-0 p-0" style="min-width:35px">
                 <button type="button" class="btn btn-lg btn-block btn-success m-0 p-0" [ngClass]="{'btn-dark':clickBtn=='Clear'}"
-                 (click)="clearClick()" style="min-height:50px;background: orange">
+                 (click)="clearClick()" style="min-height:50px;background: darkgreen">
                     CLEAR
                 </button>
             </td>
@@ -109,7 +109,7 @@
             </td>
             <td class="m-0 p-0" style="min-width:35px">
                 <button type="button" class="btn btn-lg btn-block btn-danger m-0 p-0" 
-                    style="min-height:50px;background:limegreen">
+                    style="min-height:50px;background:maroon">
                     CARD
                 </button>
             </td>
