--- a/ClientApp/app/Till/takeaways.component.html
+++ b/ClientApp/app/Till/takeaways.component.html
@@ -1,4 +1,5 @@
-<div class="row w-100 m-0 p-0" style="min-height:768px;align-content: center">
+<h3 class="text-info text-center">SELECT THE TAKEAWAY</h3>
+<div class="row w-100 m-0 p-0" style="min-height:700px;align-content: center">
     <div class="col m-0 p-0">
         <table class="table m-0 p-0">
             <tr *ngFor="let takeaway of TakeawayCol1"  class="m-0 p-0">
