--- a/ClientApp/app/Till/menuBtn.component.css
+++ b/ClientApp/app/Till/menuBtn.component.css
@@ -2,3 +2,7 @@
     background-image: linear-gradient(to bottom, rgba(255,255,255,0.5), rgba(255,255,255,0.2) 49%, rgba(0,0,0,0.15) 51%, rgba(0,0,0,0.05));
     background-repeat: repeat-x;
 }
+
+.menubtn{
+    min-height: 50px;
+}
