--- a/ClientApp/app/Till/number.component.html
+++ b/ClientApp/app/Till/number.component.html
@@ -141,7 +141,7 @@
             </td>
             <td class="m-0 p-0" style="min-width:35px">
                 <button type="button" class="btn btn-lg btn-block btn-danger m-0 p-0" 
-                    style="min-height:50px;background: maroon">
+                    style="min-height:50px;background: maroon" (click)="CashPayment()">
                     CASH
                 </button>
             </td>
