23May2018_Added Busy

--- a/ClientApp/app/app.component.html
+++ b/ClientApp/app/app.component.html
@@ -3,6 +3,7 @@
         <h6 *ngFor="let e of error">{{e}}</h6>
         <button class="btn btn-warning" (click)="clearError()">OK</button>
 </div>
+
 <div class="px-2 m-0 w-100 h-100" style="background: white" id="pos" *ngIf="error == null">
         <div class="navbar navbar-expand-xs bg-info navbar-dark m-0 p-0" style="max-height:30px">
                 <table class="table m-0 p-0">
@@ -26,7 +27,9 @@
                         </tr>
                 </table>  
         </div>
-       
+        <div class="text-center" style=" position: absolute; left: 100px;top: 100px;z-index: 10" *ngIf="apiBusy">
+                <i class="fa fa-spinner fa-spin">Loading ...</i>
+        </div>
         <router-outlet></router-outlet>
 
         
