--- a/ClientApp/app/Till/number.component.html
+++ b/ClientApp/app/Till/number.component.html
@@ -19,33 +19,38 @@
 <div class="row w-100 m-0 p-0" style="min-height:200px;max-height:200px">
     <table class="table m-0 p-0">
         <tr class="m-0 p-0">
-            <th class="m-0 p-0" style="min-width:35px">
+            <td class="m-0 p-0" style="min-width:35px">
                 <button type="button" class="btn btn-lg btn-block btn-primary m-0 p-0" 
-                    style="min-height:50px;background: darkblue">
+                    (click)="cash0Btn()" style="min-height:50px"
+                    [style.background]="clickBtn=='C0' ?'black':'darkblue'">
                     £{{cash0?.toFixed(2)}}
                 </button>
-            </th>
+            </td>
             <td class="m-0 p-0" style="min-width:35px">
-                <button type="button" class="btn btn-lg btn-block btn-primary m-0 p-0" [ngClass]="{'btn-dark':clickBtn=='7'}"
-                 (click)="numberClick('7')" style="min-height:50px;background: darkblue">
+                <button type="button" class="btn btn-lg btn-block btn-primary m-0 p-0" 
+                 (click)="numberClick('7')" style="min-height:50px"
+                 [style.background]="clickBtn=='7' ?'black':'darkblue'">
                     7
                 </button>
             </td>
             <td class="m-0 p-0" style="min-width:35px">
-                <button type="button" class="btn btn-lg btn-block btn-primary m-0 p-0" [ngClass]="{'btn-dark':clickBtn=='8'}"
-                (click)="numberClick('8')" style="min-height:50px;background: darkblue">
+                <button type="button" class="btn btn-lg btn-block btn-primary m-0 p-0"
+                (click)="numberClick('8')" style="min-height:50px"
+                [style.background]="clickBtn=='8' ?'black':'darkblue'">
                     8
                 </button>
             </td>
             <td class="m-0 p-0" style="min-width:35px">
-                <button type="button" class="btn btn-lg btn-block btn-primary m-0 p-0" [ngClass]="{'btn-dark':clickBtn=='9'}"
-                (click)="numberClick('9')" style="min-height:50px;background: darkblue">
+                <button type="button" class="btn btn-lg btn-block btn-primary m-0 p-0"
+                (click)="numberClick('9')" style="min-height:50px"
+                [style.background]="clickBtn=='9' ?'black':'darkblue'">
                     9
                 </button>
             </td>
             <td class="m-0 p-0" style="min-width:35px">
-                <button type="button" class="btn btn-lg btn-block btn-success m-0 p-0" [ngClass]="{'btn-dark':clickBtn=='Clear'}"
-                 (click)="clearClick()" style="min-height:50px;background: darkgreen">
+                <button type="button" class="btn btn-lg btn-block btn-success m-0 p-0"
+                (click)="clearClick()" style="min-height:50px"
+                [style.background]="clickBtn=='Clear' ?'black':'darkgreen'">
                     CLEAR
                 </button>
             </td>
@@ -53,31 +58,36 @@
         <tr class="m-0 p-0">
             <td class="m-0 p-0" style="min-width:35px">
                 <button type="button" class="btn btn-lg btn-block btn-primary m-0 p-0" 
-                    style="min-height:50px;background: darkblue">
+                    (click)="cash4Btn()" style="min-height:50px"
+                    [style.background]="clickBtn=='C4' ?'black':'darkblue'">
                     £{{cash4?.toFixed(2)}}
                 </button>
             </td>
             <td class="m-0 p-0" style="min-width:35px">
                 <button type="button" class="btn btn-lg btn-block btn-primary m-0 p-0" [ngClass]="{'btn-dark':clickBtn=='4'}"
-                 (click)="numberClick('4')" style="min-height:50px;background: darkblue">
+                 (click)="numberClick('4')" style="min-height:50px"
+                 [style.background]="clickBtn=='4' ?'black':'darkblue'">
                     4
                 </button>
             </td>
             <td class="m-0 p-0" style="min-width:35px">
                 <button type="button" class="btn btn-lg btn-block btn-primary m-0 p-0" [ngClass]="{'btn-dark':clickBtn=='5'}"
-                 (click)="numberClick('5')" style="min-height:50px;background: darkblue">
+                 (click)="numberClick('5')" style="min-height:50px"
+                 [style.background]="clickBtn=='5' ?'black':'darkblue'">
                     5
                 </button>
             </td>
             <td class="m-0 p-0" style="min-width:35px">
                 <button type="button" class="btn btn-lg btn-block btn-primary m-0 p-0" [ngClass]="{'btn-dark':clickBtn=='6'}"
-                 (click)="numberClick('6')" style="min-height:50px;background: darkblue">
+                 (click)="numberClick('6')" style="min-height:50px"
+                 [style.background]="clickBtn=='6' ?'black':'darkblue'">
                     6
                 </button>
             </td>
             <td class="m-0 p-0" style="min-width:35px">
                 <button type="button" class="btn btn-lg btn-block btn-success m-0 p-0" 
-                    style="min-height:50px;background: darkgreen" (click)="enterClick()">
+                    style="min-height:50px" (click)="enterClick()"
+                    [style.background]="clickBtn=='Enter' ?'black':'darkgreen'">
                     ENTER
                 </button>
             </td>
@@ -85,31 +95,36 @@
         <tr class="m-0 p-0">
             <td class="m-0 p-0" style="min-width:35px">
                 <button type="button" class="btn btn-lg btn-block btn-primary m-0 p-0" 
-                    style="min-height:50px;background: darkblue">
+                    (click)="cash8Btn()" style="min-height:50px"
+                    [style.background]="clickBtn=='C8' ?'black':'darkblue'">
                     £{{cash8?.toFixed(2)}}
                 </button>
             </td>
             <td class="m-0 p-0" style="min-width:35px">
                 <button type="button" class="btn btn-lg btn-block btn-primary m-0 p-0" [ngClass]="{'btn-dark':clickBtn=='1'}"
-                 (click)="numberClick('1')" style="min-height:50px;background: darkblue">
+                 (click)="numberClick('1')" style="min-height:50px"
+                 [style.background]="clickBtn=='1' ?'black':'darkblue'">
                     1
                 </button>
             </td>
             <td class="m-0 p-0" style="min-width:35px">
                 <button type="button" class="btn btn-lg btn-block btn-primary m-0 p-0" [ngClass]="{'btn-dark':clickBtn=='2'}"
-                 (click)="numberClick('2')" style="min-height:50px;background: darkblue">
+                 (click)="numberClick('2')" style="min-height:50px"
+                 [style.background]="clickBtn=='2' ?'black':'darkblue'">
                     2
                 </button>
             </td>
             <td class="m-0 p-0" style="min-width:35px">
                 <button type="button" class="btn btn-lg btn-block btn-primary m-0 p-0" [ngClass]="{'btn-dark':clickBtn=='3'}"
-                 (click)="numberClick('3')" style="min-height:50px;background: darkblue">
+                 (click)="numberClick('3')" style="min-height:50px"
+                 [style.background]="clickBtn=='3' ?'black':'darkblue'">
                     3
                 </button>
             </td>
             <td class="m-0 p-0" style="min-width:35px">
                 <button type="button" class="btn btn-lg btn-block btn-danger m-0 p-0" 
-                    style="min-height:50px;background:maroon">
+                    (click)="cardPayment()" style="min-height:50px"
+                    [style.background]="clickBtn=='Card' ?'black':'maroon'">
                     CARD
                 </button>
             </td>
@@ -117,31 +132,36 @@
         <tr class="m-0 p-0">
             <td class="m-0 p-0" style="min-width:35px">
                 <button type="button" class="btn btn-lg btn-block btn-primary m-0 p-0" 
-                    style="min-height:50px;background: darkblue">
+                    (click)="cash12Btn()" style="min-height:50px"
+                    [style.background]="clickBtn=='C12' ?'black':'darkblue'">
                     £{{cash12?.toFixed(2)}}
                 </button>
             </td>
             <td class="m-0 p-0" style="min-width:35px">
                 <button type="button" class="btn btn-lg btn-block btn-primary m-0 p-0" [ngClass]="{'btn-dark':clickBtn=='0'}"
-                 (click)="numberClick('0')" style="min-height:50px;background: darkblue">
+                 (click)="numberClick('0')" style="min-height:50px"
+                 [style.background]="clickBtn=='0' ?'black':'darkblue'">
                     0
                 </button>
             </td>
             <td class="m-0 p-0" style="min-width:35px">
                 <button type="button" class="btn btn-lg btn-block btn-primary m-0 p-0" [ngClass]="{'btn-dark':clickBtn=='00'}"
-                 (click)="numberClick('00')" style="min-height:50px;background: darkblue">
+                 (click)="numberClick('00')" style="min-height:50px"
+                 [style.background]="clickBtn=='00' ?'black':'darkblue'">
                     00
                 </button>
             </td>
             <td class="m-0 p-0" style="min-width:35px">
                 <button type="button" class="btn btn-lg btn-block btn-primary m-0 p-0" [ngClass]="{'btn-dark':clickBtn=='X'}"
-                 (click)="setToQty()" style="min-height:50px;background: darkblue">
+                 (click)="setToQty()" style="min-height:50px"
+                 [style.background]="clickBtn=='X' ?'black':'darkblue'">
                     X
                 </button>
             </td>
             <td class="m-0 p-0" style="min-width:35px">
                 <button type="button" class="btn btn-lg btn-block btn-danger m-0 p-0" 
-                    style="min-height:50px;background: maroon" (click)="CashPayment()">
+                    style="min-height:50px" (click)="cashPayment()"
+                    [style.background]="clickBtn=='Cash' ?'black':'maroon'">
                     CASH
                 </button>
             </td>
