03July2018Void All Work

--- a/ClientApp/app/Till/postSales.component.html
+++ b/ClientApp/app/Till/postSales.component.html
@@ -1,36 +1,42 @@
 <div class="row w-100 m-0 p-0" style="min-height:100px"></div>
 <div class="row" style="margin: auto;width: 40%;font-weight: bold">
-    
-    <h3 class="text-info text-center" style="margin: auto" >
+    <h3 class="text-success text-center" style="margin: auto" >
         {{posting}}
     </h3>
+</div>
+<div class="row" style="margin: auto;width: 40%;font-weight: bold">
+    
+    <h3 class="text-danger text-center" style="margin: auto" >
+        Change : {{change.toFixed(2)}}
+    </h3>
+    
     <table class="table table-bordered table-sm m-0 p-0" >
         <thead class="table-primary text-center">
             <th colspan="2">
                 {{header}}
             </th>
         </thead>
-        <tr class="table-info">
+        <tr class="bg-primary text-white">
             <td>No Of Items</td>
-            <td>{{noOfItems}}</td>
+            <td class="text-left">{{noOfItems}}</td>
         </tr>
-        <tr class="table-info">
+        <tr class="bg-info text-white">
             <td>Discount</td>
             <td>{{discount.toFixed(2)}}</td>
         </tr>
-        <tr class="table-success text-black">
+        <tr class="bg-success  text-white">
             <td>Total</td>
             <td>{{salesAmount.toFixed(2)}}</td>
         </tr>
-        <tr class="table-warning text-black">
+        <tr class="bg-dark text-white">
             <td>Paid</td>
             <td>{{paid.toFixed(2)}}</td>
         </tr>
-        <tr class="table-danger text-black">
+        <tr class="bg-danger  text-white">
             <td>Change</td>
             <td>{{change.toFixed(2)}}</td>
         </tr>
-        <tr class="table-info"> 
+        <tr class="bg-info"> 
             <td colspan="2">
                 <button type="button" class="btn btn-sm btn-info btn-block text-white m-0 p-0" 
                 style="min-height:50px" (click)="goToTill()" > 
