--- a/ClientApp/app/Till/postSales.component.html
+++ b/ClientApp/app/Till/postSales.component.html
@@ -40,7 +40,7 @@
             <td colspan="2">
                 <button type="button" class="btn btn-sm btn-info btn-block text-white m-0 p-0" 
                 style="min-height:50px" (click)="goToTill()" > 
-                    OK
+                    CONFIRM
                 </button>
             </td>
         </tr>
