--- a/ClientApp/app/Till/specialPermission.component.html
+++ b/ClientApp/app/Till/specialPermission.component.html
@@ -8,6 +8,9 @@
         <h6 *ngIf="showError" class="p-2 bg-warning text-white">
             Invalid username or password
         </h6>
+        <h6 *ngIf="showMessage" class="p-2 bg-warning text-white">
+            Permission Denied!
+        </h6>
         <form novalidate #authForm="ngForm" class="m-1 p-1">
             <div class="form-group">
                 <label>UserId:</label>
@@ -48,7 +51,7 @@
                         </td>
                         <td>
                             <button type="button" class="btn btn-sm btn-block text-white m-0 p-0" [disabled]="authForm.invalid"
-                            style="min-height:50px;background: blue" >
+                            style="min-height:50px;background: blue" (click)="login()" >
                                 Login
                             </button>
                         </td>
