--- a/ClientApp/app/auth/authentication.component.html
+++ b/ClientApp/app/auth/authentication.component.html
@@ -6,6 +6,9 @@
             <tr><th>Customer Id</th><td>{{Device?.customerId}}</td></tr>
             <tr><th>Store ID</th><td>{{Device?.storeId}}</td></tr>
             <tr><th>Till Id</th><td>{{Device?.tillId}}</td></tr>
+            <tr><td colspan="2" >
+                <button class="btn btn-sm btn-danger btn-block" (click)="claerDevice()">Clear</button>
+            </td></tr>
         </table>
     </div>
 </div>
